feat(BE): authentication done on be (#1)